--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "commander": "13.1.0",
+    "github-slugger": "2.0.0",
     "react": "^19.0.0",
     "solid-js": "^1.9.5",
     "vinxi": "^0.5.3"
